fix product
